Add 'set_to_pin' translation to multiple language files

--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -186,7 +186,8 @@
     "collection_archived": "Diese Sammlung wurde archiviert.",
     "day": "Tag",
     "add_a_tag": "Fügen Sie ein Tag hinzu",
-    "tags": "Schlagworte"
+    "tags": "Schlagworte",
+    "set_to_pin": "Auf „Anpinnen“ setzen"
   },
   "home": {
     "desc_1": "Entdecken, planen und erkunden Sie mit Leichtigkeit",
