--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -230,7 +230,8 @@
     "visit_link": "Visitar enlace",
     "day": "Día",
     "add_a_tag": "Agregar una etiqueta",
-    "tags": "Etiquetas"
+    "tags": "Etiquetas",
+    "set_to_pin": "Establecer en Fijar"
   },
   "worldtravel": {
     "all": "Todo",
