--- a/frontend/src/locales/it.json
+++ b/frontend/src/locales/it.json
@@ -186,7 +186,8 @@
     "visit_link": "Visita il collegamento",
     "day": "Giorno",
     "add_a_tag": "Aggiungi un'etichetta",
-    "tags": "Tag"
+    "tags": "Tag",
+    "set_to_pin": "Imposta su Blocca"
   },
   "home": {
     "desc_1": "Scopri, pianifica ed esplora con facilità",
