--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -186,7 +186,8 @@
     "visit_link": "Bezoek Link",
     "day": "Dag",
     "add_a_tag": "Voeg een label toe",
-    "tags": "Labels"
+    "tags": "Labels",
+    "set_to_pin": "Stel in op Vastzetten"
   },
   "home": {
     "desc_1": "Ontdek, plan en verken met gemak",
