--- a/frontend/src/locales/sv.json
+++ b/frontend/src/locales/sv.json
@@ -186,7 +186,8 @@
     "visit_link": "Besök länken",
     "day": "Dag",
     "add_a_tag": "Lägg till en tagg",
-    "tags": "Taggar"
+    "tags": "Taggar",
+    "set_to_pin": "Ställ in på Pin"
   },
   "home": {
     "desc_1": "Upptäck, planera och utforska med lätthet",
