--- a/frontend/src/locales/zh.json
+++ b/frontend/src/locales/zh.json
@@ -186,7 +186,8 @@
     "visit_link": "访问链接",
     "day": "天",
     "add_a_tag": "添加标签",
-    "tags": "标签"
+    "tags": "标签",
+    "set_to_pin": "设置为固定"
   },
   "home": {
     "desc_1": "轻松发现、规划和探索",
