--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -382,7 +382,8 @@
     "it": "Italienisch",
     "nl": "Niederländisch",
     "sv": "Schwedisch",
-    "zh": "chinesisch"
+    "zh": "chinesisch",
+    "pl": "Polnisch"
   },
   "share": {
     "no_users_shared": "Keine Benutzer geteilt mit",
