--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -394,7 +394,8 @@
     "it": "Italian",
     "nl": "Dutch",
     "sv": "Swedish",
-    "zh": "Chinese"
+    "zh": "Chinese",
+    "pl": "Polish"
   },
   "profile": {
     "member_since": "Member since",
