--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -394,7 +394,8 @@
     "it": "italiano",
     "nl": "Holandés",
     "sv": "sueco",
-    "zh": "Chino"
+    "zh": "Chino",
+    "pl": "Polaco"
   },
   "profile": {
     "member_since": "Miembro desde",
