--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -382,7 +382,8 @@
     "it": "italien",
     "nl": "Néerlandais",
     "sv": "suédois",
-    "zh": "Chinois"
+    "zh": "Chinois",
+    "pl": "Polonais"
   },
   "share": {
     "no_users_shared": "Aucun utilisateur partagé avec",
