--- a/frontend/src/locales/it.json
+++ b/frontend/src/locales/it.json
@@ -382,7 +382,8 @@
     "it": "Italiano",
     "nl": "Olandese",
     "sv": "svedese",
-    "zh": "cinese"
+    "zh": "cinese",
+    "pl": "Polacco"
   },
   "share": {
     "no_users_shared": "Nessun utente condiviso con",
