--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -382,7 +382,8 @@
     "it": "Italiaans",
     "nl": "Nederlands",
     "sv": "Zweeds",
-    "zh": "Chinese"
+    "zh": "Chinese",
+    "pl": "Pools"
   },
   "share": {
     "no_users_shared": "Er zijn geen gebruikers gedeeld",
