--- a/frontend/src/locales/sv.json
+++ b/frontend/src/locales/sv.json
@@ -382,7 +382,8 @@
     "it": "italienska",
     "nl": "holländska",
     "sv": "svenska",
-    "zh": "kinesiska"
+    "zh": "kinesiska",
+    "pl": "polsk"
   },
   "share": {
     "no_users_shared": "Inga användare delas med",
